# std-algorithm-tutor

./: .gitignore  CMakeLists.txt  README.md  ranges_test  ranges_test.cpp
.cache/clangd/index/: 01_all_of.cpp.F28F326950018F61.idx  01_all_of_.hpp.6F9235DBA77F5A23.idx  01_all_of_test.cpp.5901DBA970A7E027.idx  02_any_of.cpp.EE4A5B0E0883F9E3.idx  02_any_of_test.cpp.06493EA4FBD3DAED.idx  algorithms-tutor.hpp.D1B0BB603C2DD9AD.idx  main_test.cpp.BC4D39570A5C37E3.idx
exercises/: 01_all_of.cpp  02_any_of.cpp  03_none_of.cpp  04_for_each.cpp  CMakeLists.txt
include/: algorithms-tutor.hpp
test/: 01_all_of_test.cpp  02_any_of_test.cpp  03_none_of_test.cpp  04_for_each_test.cpp  CMakeLists.txt
